feat: Improve The Related Work Section

--- a/main.tex
+++ b/main.tex
@@ -452,6 +452,7 @@
 			\[ (3\wedge4) + 5 = (3 + 5) \wedge (4 + 5) = 8 \wedge 9 = 8 \]
 			\item پیچیش کمینه - جمع
 			\[ (f \otimes g)(t) = \int_{0}^{t} f(t-s)g(s)ds \]
+			\[ (f \otimes g)(t) = inf_{0 \le s \le t} \{ f(t-s) + g(s) \}\]
 		\end{itemize}
 	\end{frame}
 
@@ -470,6 +471,14 @@
 
 	%-------------------------------------------------------------------------------
 	\section{مرور ادبیات}
+
+	%-------------------------------------------------------------------------------
+	\begin{frame}{}
+	  \begin{itemize}
+			  \item مرور کارها از جهت پارامترهای کیفیت سرویس و چگونگی مدل‌سازی
+	  \end{itemize}
+	\end{frame}
+
 
 	%-------------------------------------------------------------------------------
 	\begin{frame}{مرجع~\cite{Qu2016}}
