feat: Add Description for DetNet Flows

--- a/main.tex
+++ b/main.tex
@@ -446,6 +446,19 @@
 	\begin{frame}{آشنایی با \lr{Network Calculus}}
 		\begin{itemize}\RTList{}
 			\justifying%
+			\item جریان‌های تجمعی
+			\[ R(t), non-decreasing, R(0) = 0 \]
+		\end{itemize}
+		\begin{center}\begin{figure}
+			\includegraphics[scale=0.4]{images/flow-models.png}
+			\caption{انواع جریان‌ها}
+		\end{figure}\end{center}
+	\end{frame}
+
+	%-------------------------------------------------------------------------------
+	\begin{frame}{آشنایی با \lr{Network Calculus}}
+		\begin{itemize}\RTList{}
+			\justifying%
 			\item دیود \((R \cup +\infty, \wedge, +)\)
 			\item جمع تبدیل به محاسبه‌ی \lr{infimum} می‌شود.
 			\item ضرب به جمع تبدیل می‌شود.
