--- a/references.bib
+++ b/references.bib
@@ -167,3 +167,15 @@
 	abstract =	{This document specifies the Deterministic Networking (DetNet) data plane operation for IP hosts and routers that provide DetNet service to IP-encapsulated data. No DetNet-specific encapsulation is defined to support IP flows; instead, the existing IP-layer and higher-layer protocol header information is used to support flow identification and DetNet service delivery. This document builds on the DetNet architecture (RFC 8655) and data plane framework (RFC 8938).},
 }
 
+@article{Nasrallah2019,
+  doi = {10.1109/comst.2018.2869350},
+  url = {https://doi.org/10.1109/comst.2018.2869350},
+  year = {2019},
+  publisher = {Institute of Electrical and Electronics Engineers ({IEEE})},
+  volume = {21},
+  number = {1},
+  pages = {88--145},
+  author = {Ahmed Nasrallah and Akhilesh S. Thyagaturu and Ziyad Alharbi and Cuixiang Wang and Xing Shao and Martin Reisslein and Hesham ElBakoury},
+  title = {Ultra-Low Latency ({ULL}) Networks: The {IEEE} {TSN} and {IETF} {DetNet} Standards and Related 5G {ULL} Research},
+  journal = {{IEEE} Communications Surveys {\&} Tutorials}
+}
