feat: Final Version for Presentation

--- a/main.tex
+++ b/main.tex
@@ -406,6 +406,8 @@
 	\begin{frame}{شبکه‌سازی قطعی (\lr{Deterministic Networking})}
 	  \begin{latin}
 		\fullcite{rfc8655}
+		\fullcite{rfc8938}
+		\fullcite{rfc8939}
 	  \end{latin}
 	\end{frame}
 
@@ -531,6 +533,7 @@
 			\[ \alpha(t) = rt + b \]
 		\end{itemize}
 	\end{frame}
+
 	%-------------------------------------------------------------------------------
 	\section{مرور ادبیات}
 
@@ -698,6 +701,7 @@
 				--- &
 				--- &
 				\checkmark &
+				\checkmark &
 				\checkmark \\
 				\midrule
 				\cite{Qu2016} &
@@ -705,6 +709,7 @@
 				--- &
 				\checkmark &
 				\checkmark &
+				--- &
 				--- &
 				--- \\
 				\midrule
@@ -714,6 +719,7 @@
 				--- &
 				\checkmark &
 				--- &
+				--- &
 				--- \\
 				\midrule
 				\cite{Yang2019} &
@@ -722,6 +728,7 @@
 				\checkmark &
 				--- &
 				\checkmark &
+				--- &
 				--- \\
 				\midrule
 				\cite{Huang2019} &
@@ -730,6 +737,7 @@
 				--- &
 				\checkmark &
 				\checkmark &
+				--- &
 				--- \\
 				\midrule
 				\cite{Duan2018} &
@@ -738,6 +746,7 @@
 				\checkmark &
 				\checkmark &
 				\checkmark &
+				--- &
 				--- \\
 				\bottomrule
 			\end{tabularx}
@@ -784,6 +793,10 @@
 				\scriptsize\fullcite{pmlr-v119-tang20a}
 				\end{latin}
 				\item استفاده از عامل‌های یادگیری تقویتی در مساله جایگذاری سرویس‌های مجازی شبکه
+				\item در این قسمت می‌توان برای آموزش عامل از الگوریتم‌های یادگیری عمیق مانند \lr{DQN} استفاده کرد.
+				\begin{latin}
+				\scriptsize\fullcite{Pei2020}
+				\end{latin}
 		\end{enumerate}
 	\end{frame}
 
