--- a/references.bib
+++ b/references.bib
@@ -179,3 +179,17 @@
   title = {Ultra-Low Latency ({ULL}) Networks: The {IEEE} {TSN} and {IETF} {DetNet} Standards and Related 5G {ULL} Research},
   journal = {{IEEE} Communications Surveys {\&} Tutorials}
 }
+
+@article{Pei2020,
+  doi = {10.1109/jsac.2019.2959181},
+  url = {https://doi.org/10.1109/jsac.2019.2959181},
+  year = {2020},
+  month = feb,
+  publisher = {Institute of Electrical and Electronics Engineers ({IEEE})},
+  volume = {38},
+  number = {2},
+  pages = {263--278},
+  author = {Jianing Pei and Peilin Hong and Miao Pan and Jiangqing Liu and Jingsong Zhou},
+  title = {Optimal {VNF} Placement via Deep Reinforcement Learning in {SDN}/{NFV}-Enabled Networks},
+  journal = {{IEEE} Journal on Selected Areas in Communications}
+}
