feat: Update Problem Description

--- a/problem/main.tex
+++ b/problem/main.tex
@@ -7,7 +7,20 @@
 \begin{document}
 
 \پاراگراف{}
-در این رساله قصد داریم مسائل مرتبط با کیفیت سرویس در شبکه‌های مبتنی بر نرم‌افزار برای سرویس‌های قطعی را بررسی کنیم.
+در این رساله قصد داریم مسائل مرتبط با برآورده ساختن قرارداد لایه سرویس را مورد بحث قرار دهیم. این برآورده ساختن از سه مرحله:
+
+\begin{latin}\begin{enumerate}
+   \item Fulfillment
+   \item Monitoring
+   \item Assurance
+\end{enumerate}\end{latin}
+
+تشکیل شده است. یکی از پارامترهای مهم در این برآورده‌سازی بحث کیفیت سرویس می‌باشد.
+
+\پاراگراف{}
+تاخیر یکی از پارامترهای مهم در بحث کیفیت سرویس می‌باشد. در شبکه‌های \متن‌لاتین{5G} به این موضوع پرداخته شد اما این پرداخت به اندازه‌ای نبود که بتواند این سرویس‌ها را به صورت عملیاتی پیاده‌سازی کند.
+بنابراین یکی از بحث‌های مهم در شبکه‌های \متن‌لاتین{6G} پرداختن به همین بحث تاخیر و سرویس‌های با تاخیر کم می‌باشد.
+
 مساله‌ی اول بحث کیفیت سرویس برای جایگذاری سرویس‌های قطعی در زیر ساخت مجازی‌سازی کارکردهای شبکه است و مساله‌ی دوم بحث بازجایگذاری سرویس‌ها بعد از مانیتور کردن آن‌ها در یک بازه زمانی مشخص است.
 در مساله‌ی دوم هدف بهبود جایگذری صورت گرفته در مساله اول خواهد بود.
 
@@ -17,7 +30,7 @@
 
 در بحث جایگذاری مورد مهم دیگر در رابطه با زیرساخت جایگذاری می‌باشد. زیرساخت می‌تواند برای سرویس‌های مختلف پارامترهای کیفیت سرویس گوناگونی ارائه دهد. به طور مثال می‌توان دو مرکز داده‌ای در نظر گرفت که در کنار جایگذاری نیاز به انتخاب مرکز داده‌ای نیز به وجود می‌آورد.
 در اینجا بحث کیفیت سرویس نیز مطرح است. برای بحث کیفیت سرویس نیاز داریم تاخیر سرویس‌ها را در قالب ریاضی فرمول‌بندی کنیم و از این رو بحث \متن‌لاتین{Network Calculus} به ما برای بیان شرایط حدی کمک می‌کند.
-مقالات در این حوزه عموما یک رابطه ساده برای منحنی سرویس و منحنی ورود سرویس‌ها، در نظر می‌گیرند و با مفهوم پیچش آن‌ها را به تمام سرویس تعمیم می‌دهند. مقالات کمی در حوزه بهره‌گیری از \متن‌لاتین{Network Calculus} عمیق‌تر از این عمل کرده بودند.
+مقالات در این حوزه عموما یک رابطه ساده برای منحنی سرویس و منحنی ورود سرویس‌ها، در نظر می‌گیرند و با مفهوم پیچش آن‌ها را به تمام سرویس تعمیم می‌دهند. مقالات کمی در حوزه بهره‌گیری از \متن‌لاتین{Network Calculus} عمیق‌تر از این عمل کرده بودند که عمدتا هم حوزه‌ی آن‌ها بحث‌های \متن‌لاتین{TE} می‌باشد.
 در این مرحله می‌توان یک مساله‌ی بهینه‌سازی صحیح مطرح و از روش‌های گوناگون برای حل آن بهره برد. یکی از این روش‌ها استفاده از \متن‌لاتین{Quantum computing} می‌باشد. در عین حال می‌شود از روش‌های یادگیری تقویتی هم بهره جست.
 
 \پاراگراف{}
