--- a/problem/main.tex
+++ b/problem/main.tex
@@ -6,6 +6,8 @@
 
 \begin{document}
 
+\قسمت{مساله}
+
 \پاراگراف{}
 در این رساله قصد داریم مسائل مرتبط با برآورده ساختن قرارداد لایه سرویس را مورد بحث قرار دهیم. این برآورده ساختن از سه مرحله:
 
@@ -40,5 +42,26 @@
 در این مساله نیاز به بحث‌های یادگیری ماشین نیز وجود دارد. در واقع در این مساله سعی خواهیم با استفاده از یک سری زمانی از اطلاعات که از شبکه بدست آمده است حجم ترافیک لینک‌ها را پیش‌بینی کنیم.
 در صورتی که برای سرویس‌ها از VNF-FG استفاده کنیم در این مرحله کار سخت‌تری برای پیش‌بینی ترافیک خواهیم داشت.
 
+\قسمت{مقدمه}
+
+\پاراگراف{}
+راه اندازی و استقرار سرویس در صنعت مخابرات به طور سنتی بر این اساس است که اپراتورهای شبکه سخت افزارهای اختصاصی فیزیکی
+و تجهیزات لازم برای هر کارکرد در سرویس را در زیرساخت خود مستقر کنند.
+فراهم کردن نیازمندی‌های مانند پایداری و کیفیت بالا منجر به اتکای فراهم کنندگان سرویس بر سخت افزارهای اختصاصی می‌شود.
+این درحالی است که نیازمندی کاربران به سرویس‌های متنوع و عموما با عمرکوتاه و نرخ بالای ترافیک افزایش یافته است.
+بنابراین فراهم کنندگان سرویس‌ها باید مرتبا و به صورت پیوسته تجهیزات فیزیکی جدید را خریده، انبارداری کرده و مستقر کنند.
+تمام این عملیات باعث افزایش هزینه‌های فراهم کنندگان سرویس می‌شود[1].
+با افزایش تجهیزات، پیدا کردن فضای فیزیکی برای استقرار تجهیزات جدید به مرور دشوارتر می‌شود.
+علاوه بر این باید افزایش هزینه و تاخیر ناشی از آموزش کارکنان برای کار با تجهیزات جدید را نیز در نظر گرفت.
+بدتر این ‍که هر چه نوآوری سرویس‌ها و فناوری شتاب بیشتری می‍گیرد، چرخه عمر سخت افزارها کوتاه‌تر می‍شود که مانع از ایجاد نوآوری در سرویس‌های شبکه می‌شود[2].
+
+\پاراگراف{}
+در روش سنتی استقرار سرویس شبکه، ترافیک کاربر باید از تعدادی کارکرد شبکه به ترتیب معینی عبور کند تا یک مسیر پردازش ترافیک ایجاد شود.
+در حال حاضر این کارکردها به صورت سخت افزاری به یکدیگر متصل هستند و ترافیک با استفاده از جداول مسیریابی به سمت آن‌ها هدایت می‌شود.
+چالش اصلی این روش در این است که استقرار و تغییر ترتیب کارکردها دشوار است.
+به عنوان مثال، به مرور زمان با تغییر شرایط شبکه نیازمند تغییر همبندی و یا مکان کارکردها برای سرویس‌دهی بهتر به کاربران هستیم که نیاز به جا به جایی کارکردها
+و تغییر جداول مسیریابی دارد. در روش سنتی این کار سخت و هزینه‌بر است که ممکن است خطاهای بسیاری در آن رخ دهد.
+از جنبه دیگر، تغییر سریع سرویس‌های مورد نظر کاربران نیازمند تغییر سریع در ترتیب کارکردها است که در روش فعلی این تغییرات به سختی صورت می‌گیرد.
+بنابراین اپراتورهای شبکه نیاز به شبکه‌های قابل برنامه ریزی و ایجاد زنجیره سرویس کارکردها به صورت پویا پیدا کرده‌اند[3]، [4].
 
 \end{document}
