feat: Update The Problem to contain the Introduction.

--- a/problem/main.tex
+++ b/problem/main.tex
@@ -64,4 +64,13 @@
 از جنبه دیگر، تغییر سریع سرویس‌های مورد نظر کاربران نیازمند تغییر سریع در ترتیب کارکردها است که در روش فعلی این تغییرات به سختی صورت می‌گیرد.
 بنابراین اپراتورهای شبکه نیاز به شبکه‌های قابل برنامه ریزی و ایجاد زنجیره سرویس کارکردها به صورت پویا پیدا کرده‌اند[3]، [4].
 
+\پاراگراف{}
+دو فناوری برای پاسخ گویی به این چالش‌ها مطرح شد: مجازی‌سازی کارکرد شبکه\پانویس{Network Function Virtualization}
+و زنجیره‌سازی کارکرد سرویس\پانویس{Service Function Chaining}.
+مجازی‌سازی کارکرد شبکه با استفاده از مجازی‌سازی کارکردهای شبکه و اجرای آن‌ها بر روی سرورهای استاندارد با توان بالا، امکان اجرای کارکردها
+بر روی سخت افزارهای عمومی را فراهم کرده است تا نیاز به تجهیزات سخت افزاری خاص منظوره کاهش یابد.
+از طرف دیگر زنجیره‌سازی کارکرد سرویس امکان تعریف زنجیره کارکردها را ارائه می‌کند که ایجاد و انتخاب مسیرهای متفاوت برای پردازش ترافیک
+به صورت پویا و بدون ایجاد تغییر در زیرساخت فیزیکی را امکان پذیر می‌کند.
+با توجه به این فناوری‌ها، مسائل تحقیقاتی جدیدی مطرح شدند که از مهم ترین آن‌ها می توان تخصیص منابع بهینه به سرویس درخواستی کاربر را نام برد.
+
 \end{document}
