feat: Update Problem Introduction

--- a/problem/main.tex
+++ b/problem/main.tex
@@ -73,4 +73,15 @@
 به صورت پویا و بدون ایجاد تغییر در زیرساخت فیزیکی را امکان پذیر می‌کند.
 با توجه به این فناوری‌ها، مسائل تحقیقاتی جدیدی مطرح شدند که از مهم ترین آن‌ها می توان تخصیص منابع بهینه به سرویس درخواستی کاربر را نام برد.
 
+\پاراگراف{}
+از مهم ترین اهدافی که در حل مسائل تخصیص منابع می‌توان در نظر گرفت، بحث کیفیت سرویس است.
+کیفیت سرویس تاثیر مستقیمی بر رضایت کاربر از سرویس‌های یک مرکز داده داشته و از سوی دیگر نقص آن می‌تواند به قرارداد لایه سرویس آسیب زده
+و موجب جریمه مرکز داده‌ای شود.
+% ارائه دلایل بیشتر می‌تواند به بهبود این پاراگراف کمک کند.
+
+\پاراگراف{}
+تحقیقات متعددی در رابطه با تخصیص منابع در معماری مجازی سازی کارکرد شبکه انجام شده است.
+تعداد بسیار زیادی از این تحقیقات بحث کیفیت سرویس و یا تاخیر را مدنظر قرار داده‌اند. با این وجود تعداد بسیاری از این تحقیقات فرضیات محدود کننده‌ای
+مانند نگاشت تنها یک کارکرد به هر ماشین مجازی، ایجاد حداکثر یک نمونه از هر کارکرد و \نقاط‌خ
+
 \end{document}
