--- a/problem/main.tex
+++ b/problem/main.tex
@@ -83,5 +83,6 @@
 تحقیقات متعددی در رابطه با تخصیص منابع در معماری مجازی سازی کارکرد شبکه انجام شده است.
 تعداد بسیار زیادی از این تحقیقات بحث کیفیت سرویس و یا تاخیر را مدنظر قرار داده‌اند. با این وجود تعداد بسیاری از این تحقیقات فرضیات محدود کننده‌ای
 مانند نگاشت تنها یک کارکرد به هر ماشین مجازی، ایجاد حداکثر یک نمونه از هر کارکرد و \نقاط‌خ
+این در حالی است که مراکز داده برای ارائه سرویس بهتر نیاز به استفاده از همه منابع خود داشته و در بسیاری از اوقات نیز نمی‌توان برای ترافیک موردنظر تنها از یک نمونه استفاده کرد.
 
 \end{document}
