feat: Update Problem Introduction

--- a/problem/main.tex
+++ b/problem/main.tex
@@ -82,7 +82,9 @@
 \پاراگراف{}
 تحقیقات متعددی در رابطه با تخصیص منابع در معماری مجازی سازی کارکرد شبکه انجام شده است.
 تعداد بسیار زیادی از این تحقیقات بحث کیفیت سرویس و یا تاخیر را مدنظر قرار داده‌اند. با این وجود تعداد بسیاری از این تحقیقات فرضیات محدود کننده‌ای
-مانند نگاشت تنها یک کارکرد به هر ماشین مجازی، ایجاد حداکثر یک نمونه از هر کارکرد و \نقاط‌خ
+مانند نگاشت تنها یک کارکرد به هر ماشین مجازی، ایجاد حداکثر یک نمونه از هر کارکرد، عدم به اشتراک گذاری کارکردها و \نقاط‌خ
 این در حالی است که مراکز داده برای ارائه سرویس بهتر نیاز به استفاده از همه منابع خود داشته و در بسیاری از اوقات نیز نمی‌توان برای ترافیک موردنظر تنها از یک نمونه استفاده کرد.
+بنابراین در این رساله فرض شده است که می‌توان از یک کارکرد نمونه‌های مختلف ساخته و از یک ماشین مجازی برای نگاشت بیش از یک کارکرد استفاده نمود.
+همچنین در جهت کاهش هزینه‌های مرکز داده‌ای می‌توان از یک نمونه کارکرد برای سرویس‌دهی به چند زنجیره نیز استفاده کرد که در این رساله مدنظر قرار گرفته است.
 
 \end{document}
