feat: Update Introduction Section

--- a/problem/main.tex
+++ b/problem/main.tex
@@ -87,4 +87,25 @@
 بنابراین در این رساله فرض شده است که می‌توان از یک کارکرد نمونه‌های مختلف ساخته و از یک ماشین مجازی برای نگاشت بیش از یک کارکرد استفاده نمود.
 همچنین در جهت کاهش هزینه‌های مرکز داده‌ای می‌توان از یک نمونه کارکرد برای سرویس‌دهی به چند زنجیره نیز استفاده کرد که در این رساله مدنظر قرار گرفته است.
 
+\پاراگراف{}
+در این رساله به تحقق و تمضین توافق‌نامه لایه سرویس، سرویس‌های درخواستی کاربران تمرکز می‌کنیم.
+سرویس درخواستی هر کاربر را به صورت مجموعه‌ای از کارکردها که توسط گراف \متن‌لاتین{SFC} با یکدیگر ارتباط دارند در نظر می‌گیریم.
+برای استقرار سرویس باید مشخص شود که هر کارکرد باید بر روی چه سرورهایی در شبکه زیرساخت مستقر شود
+و پهنای باند لینک‌های زیرساخت چگونه به لینک های بین کارکردها اختصاص یابد.
+در این رساله صرفا کارکردهای مجازی را در نظر میگیریم و فرض می‌کنیم که هر کارکرد توسط یک VNF که پیاده سازی نرم‌افزاری آن کارکرد است ارائه می‌شود.
+ما فرض می‌کنیم تعدادی درخواست سرویس توسط فراهم‌کننده زیرساخت دریافت شده است. تضمین توافق‌نامه لایه سرویس از سه گام تشکیل شده است: تحقق، تضمین و اثبات.
+برای هر یک از درخواست‌ها می‌بایست این مراحل طی شود تا توافق‌نامه لایه سرویس تضمین شود.
+% بنابراین از VNF-FG استفاده نکرده و به SFC بسنده می‌کنیم؟ شاید استفاده از VNF-FG برای بحث گراف جذابتر باشد.
+
+\پاراگراف{}
+در این رساله ما مساله تحقق و تضمین توافق‌نامه لایه سرویس برای سرویس‌های درخواستی کاربر در مجازی‌سازی کارکردهای شبکه را در نظر گرفته و آن را در قالب سه زیر مساله مرتبط
+مورد بررسی قرار می‌دهیم.
+
+\پاراگراف{}
+در مساله اول به بحث جایگذاری و تخصیص منابع به سرویس‌های درخواستی در جهت تحقق توافق‌نامه لایه سرویس می‌پردازیم. در این مساله بر خلاف مسائل موجود فرض می‌شود درخواست‌ها
+به صورت برخط در اختیار مرکز داده‌ای قرار گرفته و خروجی مساله اول پذیرش یا عدم پذیرش درخواست‌ها می‌باشد.
+
+\پاراگراف{}
+در مساله دوم سرویس‌های پذیرش شده
+
 \end{document}
