feat: Update Proposal Problem

--- a/problem/main.tex
+++ b/problem/main.tex
@@ -106,6 +106,7 @@
 به صورت برخط در اختیار مرکز داده‌ای قرار گرفته و خروجی مساله اول پذیرش یا عدم پذیرش درخواست‌ها می‌باشد.
 
 \پاراگراف{}
-در مساله دوم سرویس‌های پذیرش شده
+در مساله دوم منابع لازم جهت تضمین توافق‌نامه لایه سرویس برای سرویس‌های پذیرش شده تخصیص پیدا می‌کند. از این سو زیرساخت مرکز داده‌ای مانیتور شده تا خطاهای احتمالی
+مشخص و رفع گردند و آسیبی به توافق‌نامه لایه سرویس نرسد.
 
 \end{document}
