feat: Complete the introduction section.

--- a/problem/main.tex
+++ b/problem/main.tex
@@ -106,7 +106,34 @@
 به صورت برخط در اختیار مرکز داده‌ای قرار گرفته و خروجی مساله اول پذیرش یا عدم پذیرش درخواست‌ها می‌باشد.
 
 \پاراگراف{}
-در مساله دوم منابع لازم جهت تضمین توافق‌نامه لایه سرویس برای سرویس‌های پذیرش شده تخصیص پیدا می‌کند. از این سو زیرساخت مرکز داده‌ای مانیتور شده تا خطاهای احتمالی
-مشخص و رفع گردند و آسیبی به توافق‌نامه لایه سرویس نرسد.
+همواره در زیرساخت خطاهایی به وجود می‌آید که در نتیجه آن توافق‌نامه لایه سرویس به خطر می‌افتد. در مساله دوم با نظارت بر زیرساخت عملیات‌های لازم پیش و در هنگام
+وقوع خطا مشخص می‌شوند تا بتوان توافق‌نامه لایه سرویس را تضمین کرد.
+
+% مساله سوم.
+%
+
+\پاراگراف{}
+در همه مسائل پیشنهادی نیاز به انتخاب و انجام تعدادی عملیات می‌باشد، بنابراین در حل همه این مسائل از چهارچوب یادگیری تقویتی عمیق\پانویس{Deep Reinforcement Learning}
+استفاده می‌شود تا عامل بتواند بهترین عمل را انتخاب و انجام دهد.
+با توجه به این موضوع که زیرساخت شبکه به شکل گراف می‌باشد در یادگیری تقویتی عمیق از شبکه‌های عصبی گرافی\پانویس{Graph Neural Network} استفاده می‌شود تا عامل نسبت
+به شبکه‌های جدید کارآیی بهتری داشته باشد.
+
+\پاراگراف{}
+به صورت خلاصه نوآوری‌های این رساله به شرح زیر می‌باشد:
+
+\شروع{فقرات}
+\فقره امکان به اشتراک‌گذاری کارکردها میان چندین زنجیره و در نظر گرفتن پارامتر‌های کیفیت سرویس برای تحقق تفاهم‌نامه لایه سرویس: در جهت مصرف بهینه منابع ممکن است یک
+کارکرد میان چندین زنجیره به اشتراک گذاشته شود که نیاز به در نظر گرفتن پارامترهای کیفیت سرویس را دارد چرا که می‌تواند آن‌ها را به مخاطره بیاندازد.
+\فقره استفاده از چهارچوب یادگیری تقویتی عمیق بر پایه شبکه‌های عصبی گرافی که می‌تواند کارآیی عامل نسبت به شبکه‌های جدید را افزایش دهد.
+\فقره در نظر گرفتن بحث‌های نظارتی در مجازی‌سازی کارکرد شبکه برای جلوگیری از خطا به صورت بلادرنگ: خطاهای بسیار در شبکه‌ها رخ می‌دهند که نیاز دارند به آن‌ها رسیدگی شود و
+در صورت نیاز حتی از آن‌ها پشیگیری شود. در این رساله این بحث به صورت بلادرنگ در نظر گرفته می‌شود و از سوی دیگر با پیش‌بینی پارامترها از خطاها پیش‌گیری نیز خواهد شد.
+\پایان{فقرات}
+
+\پاراگراف{}
+در نهایت ساختار رساله به شرحی است که در ادامه می‌آید.
+در فصل دوم معماری‌های \متن‌لاتین{NFV} و \متن‌لاتین{SFC} و اجزای آن‌ها را شرح می‌دهیم.
+در فصل سوم مسائل تحقیقاتی مطرح شده در این معماری‌ها را بررسی می‌کنیم و آن‌ها را از جنبه در نظر گرفتن انرژی با یکدیگر مقایسه می‌کنیم.
+در فصل چهارم مسائل پیشنهاد شده در رساله به صورت دقیق شرح داده می‌شوند.
+در نهایت در فصل پنجم به روش حل ارائه شده برای حل مسائل می‌پردازیم و فصل ششم به جمع بندی و ارائه زمان بندی انجام رساله اختصاص دارد.
 
 \end{document}
