feat: Switch to Book Structure

--- a/problem/main.tex
+++ b/problem/main.tex
@@ -1,4 +1,4 @@
-\documentclass{article}
+\documentclass{book}
 
 \usepackage[localise]{xepersian}
 
@@ -6,7 +6,7 @@
 
 \begin{document}
 
-\قسمت{مساله}
+\فصل{مساله}
 
 \پاراگراف{}
 در این رساله قصد داریم مسائل مرتبط با برآورده ساختن قرارداد لایه سرویس را مورد بحث قرار دهیم. این برآورده ساختن از سه مرحله:
@@ -42,7 +42,7 @@
 در این مساله نیاز به بحث‌های یادگیری ماشین نیز وجود دارد. در واقع در این مساله سعی خواهیم با استفاده از یک سری زمانی از اطلاعات که از شبکه بدست آمده است حجم ترافیک لینک‌ها را پیش‌بینی کنیم.
 در صورتی که برای سرویس‌ها از VNF-FG استفاده کنیم در این مرحله کار سخت‌تری برای پیش‌بینی ترافیک خواهیم داشت.
 
-\قسمت{مقدمه}
+\فصل{مقدمه}
 
 \پاراگراف{}
 راه اندازی و استقرار سرویس در صنعت مخابرات به طور سنتی بر این اساس است که اپراتورهای شبکه سخت افزارهای اختصاصی فیزیکی
@@ -136,6 +136,6 @@
 در فصل چهارم مسائل پیشنهاد شده در رساله به صورت دقیق شرح داده می‌شوند.
 در نهایت در فصل پنجم به روش حل ارائه شده برای حل مسائل می‌پردازیم و فصل ششم به جمع بندی و ارائه زمان بندی انجام رساله اختصاص دارد.
 
-\قسمت{مفاهیم و معماری‌های مرتبط}
+\فصل{مفاهیم و معماری‌های مرتبط}
 
 \end{document}
