feat: Update Concepts Section

--- a/problem/main.tex
+++ b/problem/main.tex
@@ -137,5 +137,36 @@
 در نهایت در فصل پنجم به روش حل ارائه شده برای حل مسائل می‌پردازیم و فصل ششم به جمع بندی و ارائه زمان بندی انجام رساله اختصاص دارد.
 
 \فصل{مفاهیم و معماری‌های مرتبط}
+\قسمت{مقدمه}
+
+\پاراگراف{}
+راه‌اندازی و استقرار سرویس در صنعت مخابرات به طور سنتی بر این اساس است که اپراتورهای شبکه، سخت‌افزارهای و نرم‌افزارهای مناسب هر کارکرد در سرویس را در زیرساخت خود مستقر کنند.
+فراهم کردن نیازمندی‌هایی مانند پایداری و کیفیت سرویس بالا منجر به اتکای فراهم کنندگان سرویس بر تجهیزات اختصاصی می‌شود.
+نیازمندی کاربران به سرویس‌های متنوع و عموما با عمرکوتاه و نرخ بالای ترافیک نیز افزایش یافته است.
+بنابراین فراهم کنندگان سرویس‌ها باید مرتبا و به صورت پیوسته تجهیزات فیزیکی جدید را خریده، انبارداری کرده و مستقر کنند که باعث افزایش هزینه‌های فراهم کنندگان سرویس می شود[1].
+از سوی دیگر در تحقیقاتی که اخیرا انجام شده است، نشان داده شده که تعداد سخت افزارهای خاص منظوره نصب شده برای کارکردهای شبکه قابل مقایسه با تعداد سوییچ ها و مسیریاب‌های شبکه
+است[4].
+با افزایش تعداد تجهیزات، پیدا کردن فضای فیزیکی برای استقرار تجهیزات جدید به مرور دشوارتر می‌شود.
+علاوه بر این باید افزایش هزینه و تاخیر ناشی از آموزش کارکنان برای کار با تجهیزات جدید را نیز در نظر گرفت.
+همچنین اغلب کارایی و قابلیت‌های سخت افزارها و نرم افزارهای خاص منظوره که از سمت فروشندگان تجهیزات ارائه می‌شود محدود به انتخاب‌های فروشندگان است
+و خریداران تجهیزات قادر به سفارشی‌سازی تجهیزات خریداری شده نیستند.
+بدتر این ‍که هر چه نوآوری سرویس‍‌ها و فناوری شتاب بیشتری می‍گیرد، چرخه عمر سخت‌افزارها کوتاه‍تر می‍شود که مانع از ایجاد نوآوری در سرویس‌های شبکه می‌شود[2].
+
+\پاراگراف{}
+در روش سنتی استقرار سرویس شبکه، ترافیک کاربر باید از تعدادی کارکرد شبکه به ترتیب معینی عبور کند تا یک مسیر پردازش ترافیک ایجاد شود.
+در حال حاضر این کارکردها به صورت سخت افزاری به یکدیگر متصل هستند و ترافیک با استفاده از جداول مسیریابی به سمت آن ها هدایت می‌شود.
+چالش اصلی این روش در این است که استقرار و تغییر ترتیب کارکردها دشوار است.
+به عنوان مثال، به مرور زمان با تغییر شرایط شبکه نیازمند تغییر همبندی و یا مکان کارکردها برای سرویس‌دهی بهتر به کاربران هستیم
+که نیاز به جا به جایی کارکردها و تغییر جداول مسیریابی دارد.
+در روش سنتی این کار سخت و هزینه‌بر است که ممکن است خطاهای بسیاری در آن رخ دهد.
+از جنبه دیگر، تغییر سریع سرویس‌های مورد نظر کاربران نیازمند تغییر سریع در ترتیب کارکردها است که در روش فعلی این تغییرات به سختی صورت گیرد.
+بنابراین اپراتورهای شبکه نیاز به شبکه‌های قابل برنامه ریزی و ایجاد زنجیره سرویس کارکردها به صورت پویا پیدا کرده‌اند[3]، [4].‍‍
+
+\پاراگراف{}
+دو فناوری برای پاسخ گویی به این چالش ها مطرح شد: مجازی‌سازی کارکرد شبکه \متن‌لاتین{(NFV)} و زنجیره‌سازی کارکردهای سرویس \متن‌لاتین{(SFC)}.‍
+هدف از مجازی‌سازی کارکردهای شبکه این است که کارکردها بتوانند بر روی سخت افزارهای استاندارد اجرا شوند تا
+نیاز به تجهیزات سخت‌افزاری خاص منظوره کاهش یابد.
+از طرف دیگر زنجیره‌سازی کارکردهای سرویس امکان تعریف زنجیره کارکردها به صورت پویا و در هر زمان را ارائه می‌کند که تغییر در زیرساخت فیزیکی را کاهش می‌دهد.
+از آنجایی که از مفاهیم این فناوری ها برای طراحی و تعریف مسئله در این رساله استفاده شده است، نیازمند آشنایی با مفاهیم ابتدایی و اصول اولیه آن ها خواهیم بود. بنابراین در این فصل به صورت خلاصه اجزای این فناوری ها را مرور خواهیم کرد و کاربردها، چالش ها و مسائل تحقیقاتی که در هر یک از این معماری ها وجود دارد را مورد بررسی قرار خواهیم داد.
 
 \end{document}
