feat: Update Proposal

--- a/problem/main.tex
+++ b/problem/main.tex
@@ -167,6 +167,41 @@
 هدف از مجازی‌سازی کارکردهای شبکه این است که کارکردها بتوانند بر روی سخت افزارهای استاندارد اجرا شوند تا
 نیاز به تجهیزات سخت‌افزاری خاص منظوره کاهش یابد.
 از طرف دیگر زنجیره‌سازی کارکردهای سرویس امکان تعریف زنجیره کارکردها به صورت پویا و در هر زمان را ارائه می‌کند که تغییر در زیرساخت فیزیکی را کاهش می‌دهد.
+
+\پاراگراف{}
 از آنجایی که از مفاهیم این فناوری ها برای طراحی و تعریف مسئله در این رساله استفاده شده است، نیازمند آشنایی با مفاهیم ابتدایی و اصول اولیه آن ها خواهیم بود. بنابراین در این فصل به صورت خلاصه اجزای این فناوری ها را مرور خواهیم کرد و کاربردها، چالش ها و مسائل تحقیقاتی که در هر یک از این معماری ها وجود دارد را مورد بررسی قرار خواهیم داد.
+
+\قسمت{مجازی‌سازی کارکرد شبکه}
+\پاراگراف{}
+مجازی‌سازی کارکرد شبکه اصل جداسازی کارکرد شبکه به وسیله انتزاع سخت‌افزاری مجازی از سخت‌افزاری است که بر روی آن اجرا می‌شود.
+هدف مجازی‌سازی کارکرد شبکه تغییر روش اپراتورهای شبکه در طراحی شبکه با تکامل مجازی‌سازی استاندارد فناوری اطلاعات به منظور تجمیع تجهیزات شبکه در سرورهای استاندارد،
+سوییچ‌ها و ذخیره‌سازها با توان بالا است.
+یک سرور استاندارد با توان بالا سروری است که توسط اجزای استاندارد شده فناوری اطلاعات، مانند معماری \متن‌لاتین{x86}، ساخته‌شده و در تعداد بالایی، مانند میلیون، فروخته می‌شود.
+ویژگی اصلی این سرورها این است که اجزای آن‌ها به راحتی از فروشندگان مختلف قابل خریداری و تعویض است.
+این تجهیزات می‌توانند در مراکز داده، گره‌های شبکه، یا مکان کاربران انتهایی قرار بگیرند.
+این روند در \رجوع{fig:nfv-opinion} نیز توصیف شده است. با استفاده از مجازی‌سازی کارکرد شبکه، انواع کارکردهای شبکه مانند دیواره آتش و \متن‌لاتین{NAT} را می‌توان
+به صورت یک برنامه نرم‌افزاری از فروشندگان مختلف تهیه کرد و آن‌ها را بر روی سرورهای با توان بالا اجرا کرد که نیاز به نصب تجهیزات خاص منظوره و جدید را برطرف می‌سازد[2].
+
+\پاراگراف{}
+مزایا و اهداف اساسی که \متن‌لاتین{NFV} برای تحقق و دست‍یابی به آن‍ها شکل گرفته است عبارتند از[6]:
+
+\شروع{فقرات}
+\فقره کاهش هزینه‌های تجهیزات و مصرف انرژی از طریق تجمیع کارکردها بر روی سرورها و در نتیجه کاهش تعداد تجهیزات
+\فقره کاهش نیاز به آموزش کارکنان، افزایش دسترسی‌پذیری به سخت‌افزار و کاهش زمان بازیابی از خرابی سخت‌افزار به علت استفاده از سخت‌افزارهای استاندارد و عمومی
+\فقره افزایش سرعت عرضه محصول به بازار با کوتاه کردن چرخه نوآوری و تولید. در واقع مجازی‌سازی کارکرد شبکه به اپراتورهای شبکه کمک می‌کند تا چرخه بلوغ محصول را به اندازه قابل توجهی کاهش دهند.
+\فقره امکان‍پذیر بودن تعریف سرویس مورد نظر بر اساس نوع مشتری یا محل جغرافیایی. مقیاس سرویس‌ها می‍تواند به سرعت، بر اساس نیاز، گسترش یا کاهش یابد.
+\فقره تشویق به ایجاد نوآوری و ارائه سرویس‌های جدید و دریافت جریان‌های درآمدی تازه با سرعت بالا و ریسک پایین.
+\فقره افزایش توانایی مقابله با خرابی کارکردها، قابلیت به اشتراک گذاری منابع بین کارکردها و پشتیابی از چند مشتری
+\پایان{فقرات}
+
+\پاراگراف{}
+سازمان‌های استانداردگذاری متعددی در استانداردسازی فناوری مجازی‌سازی کارکرد شبکه دخیل هستند که شاخص‌ترین آن‌ها موسسه استانداردهای مخابراتی اروپا\پانویس{European Telecommunications Standards Institute} \متن‌لاتین{(ETSI)} است.
+در اواخر سال ۲۰۱۲ \متن‌لاتین{ETSI NFV ISG} توسط هفت اپراتور جهانی شبکه به منظور ارتقا ایده مجازی‌سازی کارکرد شبکه تأسیس شد.
+\متن‌لاتین{NFV ISG} تبدیل به یک بستر صنعتی اصلی برای توسعه چارچوب معماری \متن‌لاتین{NFV} و نیازمندی‌های آن شده است
+و اکنون بیش از ۲۵۰ سازمان با آن همکاری می‌کنند. اسناد معماری \متن‌لاتین{NFV} به صورت عمومی و رایگان توسط \متن‌لاتین{ETSI NFV ISG} منتشر می‌شود.
+ما در این رساله برای توصیف معماری \متن‌لاتین{NFV} از اسناد ارائه شده این سازمان استفاده می‌کنیم.
+
+\زیرقسمت{اجزای معماری \متن‌لاتین{NFV}}
+
 
 \end{document}
