feat: Update Proposal

--- a/problem/main.tex
+++ b/problem/main.tex
@@ -203,5 +203,11 @@
 
 \زیرقسمت{اجزای معماری \متن‌لاتین{NFV}}
 
+\پاراگراف{}
+در این بخش مؤلفه‌های تشکیل‌دهنده معماری \متن‌لاتین{NFV} شرح داده می‌شوند.
+هر یک از اجزای معماری می‌توانند توسط تولیدکنندگان متفاوتی تأمین شوند و به وسیله واسط‌هایی که توسط معماری \متن‌لاتین{NFV} توصیف شده‌اند
+با یکدیگر در ارتباط باشند.
+بنابراین معماری \متن‌لاتین{NFV} توصیف شده توسط \متن‌لاتین{ETSI} راه‌حلی با قابلیت مشارکت و هماهنگی چندین تولیدکننده مختلف را دارد.
+مؤلفه‌های اصلی چارچوب معماری \متن‌لاتین{NFV} که در \رجوع{fig:nfv-architecture} دیده می‌شوند عبارتند از:
 
 \end{document}
